# smart-fire-hub

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  test_complaints.csv  test_survey.csv  turbo.json
.claude/agents/: ai-agent-developer.md  analyst.md  architect.md  backend-developer.md  frontend-developer.md  project-leader.md  project-manager.md  (+2 more)
.husky/: pre-commit  pre-push
.playwright/: cli.config.json
.playwright-mcp/: satisfaction-survey-export.csv
apps/firehub-executor/: .gitignore  Dockerfile  package.json  pyproject.toml  requirements.txt
apps/firehub-executor/app/: config.py  dependencies.py  main.py
apps/firehub-executor/app/db/: connection.py
apps/firehub-executor/app/middleware/: auth.py
apps/firehub-executor/app/routers/: api_call.py  health.py  python_exec.py  query.py  sql.py
apps/firehub-executor/app/schemas/: requests.py  responses.py
apps/firehub-executor/app/services/: api_call_executor.py  db_utils.py  python_executor.py  query_executor.py  sql_executor.py
apps/firehub-executor/app/validators/: sql_validator.py  ssrf_protection.py
apps/firehub-executor/tests/: conftest.py  test_api_call_executor.py  test_auth_middleware.py  test_python_executor.py  test_query_executor.py  test_sql_executor.py  test_sql_validator.py  test_ssrf_protection.py
docs/: ISSUES.md  ROADMAP.md  ai-chat-widget-rendering.md  platform-comparison-roadmap.md  testing-guidelines.md  todo.md
scripts/: continuous-task.sh  deploy.sh  update.sh
(+1546 files in other folders)
